# ircstream

./: .gitignore  README.md  events.py  ircnumeric.py  ircstream.conf  ircstream.py  pylintrc  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yaml
contrib/: ircdiff.py
debian/: changelog  control  copyright  install  rules  service
debian/source/: options
ircstream/: __init__.py  __main__.py  _version.py  ircfmt.py  ircserver.py  main.py  prometheus.py  rc2udp.py  sse.py
tests/: __init__.py  conftest.py  ircclient.py  stress.sh  test_argparse.py  test_argparse_misc.py  test_ircfmt.py  test_ircmessage.py  test_ircnumeric.py  test_irctk.py  test_jaraco.py  test_prometheus.py  test_rawsocket.py  test_rc2udp.py  test_server.py  test_zzz_integration.py
tests/data/ircfmt/: 00-empty.json  01-log.json  01-log.out  02-edit.json  02-edit.out  03-nouser.json  03-nouser.out  03-nouser.xfail  04-type-categorize.json  05-type-new.json  05-type-new.out  06-patrolled-true.json  06-patrolled-true.out  07-patrolled-false.json  07-patrolled-false.out  08-bot.json  08-bot.out  09-szdiff-negative-small.json  09-szdiff-negative-small.out  10-szdiff-negative-large.json  10-szdiff-negative-large.out
