[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ircstream"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
write_to = "ircstream/_version.py"

[project]
requires-python = ">=3.11"
name = "ircstream"
dynamic = ["version"]
authors = [
    {name = "Faidon Liambotis", email = "paravoid@debian.org"},
]
maintainers = [
    {name = "Faidon Liambotis", email = "paravoid@debian.org"},
]
description = "MediaWiki RC→IRC gateway"
readme = "README.md"
keywords = ["irc", "mediawiki", "wikimedia"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "prometheus_client>=0.16.0",
    "structlog>=22.3.0",
]
optional-dependencies.sse = [
    "aiohttp-sse-client==0.2.1",
]
optional-dependencies.tests = [
    "ircstream[sse]",
    "coverage[toml]",
    "pytest==7.*",
    "pytest-cov",
    "pytest-asyncio==0.21.0",
    "irc",
    "pyyaml",
]
optional-dependencies.type = [
    "ircstream[tests]",
    "mypy==1.11.2",
    "types-PyYAML",
]
optional-dependencies.lint = [
    "ircstream[tests]",
    "validate-pyproject[all]==0.13",
    "ruff==0.6.8",
]
optional-dependencies.dev = [
    "ircstream[tests]",
    "ircstream[type]",
    "ircstream[lint]",
]

[project.urls]
homepage = "https://github.com/paravoid/ircstream"
repository = "https://github.com/paravoid/ircstream.git"

[project.scripts]
ircstream = "ircstream.main:run"

# testing
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "^\\s*raise NotImplementedError\\b",
    "^\\s*return NotImplemented\\b",
    '^if __name__ == "__main__":$',
    'if TYPE_CHECKING:',
]

[tool.mypy]
strict = true

# linters
[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = [
    "F",    # Pyflakes
    "E",    # pycodestyle Error
    "W",    # pycodestyle Warning
    "I",    # isort
    "PLE",  # Pylint Errors
    "PLW",  # Pylint Warning
    "PLC",  # Pylint Conventions
    "N",    # pep8-naming
    "D",    # pycodestyle
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "DTZ",  # flake8-datetimez
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "RUF",  # Ruff-specific rules
]
lint.ignore = [
    "D107", # Missing docstring in `__init__`
    "D202", # https://github.com/PyCQA/pydocstyle/issues/627
    "D203", # incompatible with D211
    "D213", # incompatible with D213
    "ISC001", # incompatible with the ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]  # Use of `assert` detected
